--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -1,5 +1,5 @@
 ---
-output: html_document
+output: pdf_document
 ---
 
 <!--
@@ -81,11 +81,11 @@ To explore differences in species distribution and range between the two dataset
  This analysis revealed a general negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
-The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. For representative maps from each category, please refer to the supplemental materials (SI Fig. XXX).  
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. For representative maps from each category, please refer to the supplemental materials (Fig. S1).  
 
-The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (SI Fig. XXX).
+The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
 
-The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (SI Figs. XXX, XXX). 
+The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (Fig. S3). 
  Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are meaningless when the distributions are poorly aligned.
@@ -99,23 +99,52 @@ Method-driven differences in commission and omission errors drive clear and sign
 
 **Case Study: The Ocean Health Index**
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the `r format(n_spp_both, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data. 
+``` {r calc_ohi_numbers, echo = FALSE, message = FALSE, warning = FALSE}
+spp_ohi <- spp_all %>%
+  filter(!is.na(spatial_source) & !is.na(category_score)) %>%
+  select(am_sid, iucn_sid, spatial_source) %>%
+  unique()
 
-We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig4'>Fig. 4</a>).  Reducing the threshold increases the apparent range of a species; the slight decrease in average score for scenario 1 suggests increased spatial representation of threatened species.  The slight increase in mean score for scenario 2 may indicate a small increase in spatial representation of low-risk species, a small decrease in spatial representation of high-risk species, or a combination of both.  The large decrease shown in scenario 3 indicates that a zero threshold greatly increases the spatial representation of high-risk species.
+n_spp_am_ohi <- spp_ohi %>% 
+                    filter(str_detect(spatial_source, 'am')) %>%
+                    select(am_sid) %>%
+                    unique() %>%
+                    nrow()
+n_spp_iucn_ohi <- spp_ohi %>%
+                    filter(str_detect(spp_ohi$spatial_source, 'iucn')) %>%
+                    filter(is.na(am_sid)) %>%
+                    unique() %>%
+                    nrow()
+n_spp_both_ohi <- spp_ohi %>% 
+                    filter(!is.na(am_sid)) %>%
+                    filter(str_detect(spatial_source, 'iucn')) %>%
+                    select(iucn_sid) %>%
+                    unique() %>%
+                    nrow()
+
+n_spp_ohi <- n_spp_iucn_ohi + n_spp_am_ohi + n_spp_both_ohi
+
+p_spp_both_ohi <- round(n_spp_both_ohi/n_spp_ohi * 100, 1)
+
+```
+
+The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
+
+We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species; the slight decrease in average score for scenario 1 suggests increased spatial representation of threatened species.  The slight increase in mean score for scenario 2 may indicate a small increase in spatial representation of low-risk species, a small decrease in spatial representation of high-risk species, or a combination of both.  The large decrease shown in scenario 3 indicates that a zero threshold greatly increases the spatial representation of high-risk species.
  
-Given that only `r format(p_both_all, big.mark = ',')`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained up to 5 points while others dropped as many as 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined can result in a more dire assessment of species conservation status. 
+Given that only `r p_spp_both_ohi`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a very different assessment of species conservation status.
 
 **Case Study: MPA Gap Analysis**
 
 Klein et al. (2015) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all ("gap" species).
 
-We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using 2015 AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig5'>Fig. 5</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
+We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using 2015 AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
 
 # Conclusions
 
 AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other appriaches exist for species distribution modeling, these two are the only ones applied globally to marine species.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission errors and omission errors between these datasets point to a few important ways to improve range alignment.
 
-For IUCN range data, clipping ranges to known depth limits improves output for many species, most notably corals and other demersal species dependent on photosynthesis.  If species' depth limits are not known, simple rules of thumb will likely reduce commission errors without introducing substantial omission errors.  For example, for most corals, researchers could clip range maps to the photosynthetic limit of 200 meters.  For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World (Spalding et al. 2007) would likely decrease commission errors and improve predictive power, especially for data-poor species.
+For IUCN range data, clipping ranges to known depth limits improves output for many species, most notably corals and reef-associated fishes.  If species' depth limits are not known, simple rules of thumb will likely reduce commission errors without introducing substantial omission errors.  For example, for most corals, researchers could clip range maps to the photosynthetic limit of 200 meters.  For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World (Spalding et al. 2007) would likely decrease commission errors and improve predictive power, especially for data-poor species.
 
 Many studies using AquaMaps data test the sensitivity of results by varying the probability of occurrence threshold to determine presence.  This decision ultimately represents a tradeoff between errors of commission (low threshold) and omission (high threshold).  Using AquaMaps in conjunction with IUCN can mitigate potential errors, while also increasing the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized. In this case, we recommend a presence threshold of 0% as it most closely approximates the "limits of distribution" criterion defined by IUCN data providers.
 
