--- a/data_explore/data_explore_am_thresh.Rmd
+++ b/data_explore/data_explore_am_thresh.Rmd
@@ -5,18 +5,14 @@ This looks at the full 2014 Aquamaps dataset... should it be limited to species 
 ```{r aquamaps_load_data, warning = FALSE, message = FALSE, echo = FALSE, include = FALSE, eval = TRUE}
 
 # get spp_cells raw data for aquamaps
-dir_aquamaps <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO/raw/aquamaps_2014')
+dir_aquamaps <- file.path(dir_N, 'git-annex/globalprep/_raw_data/aquamaps/v2015')
 
-spp_cells <- read_csv(file.path(dir_aquamaps, 'tables/ohi_hcaf_species_native.csv'), 
-                      col_types = '_ccd__', progress = TRUE)
+spp_cells <- read_csv(file.path(dir_aquamaps, 'csv/hcaf_sp_native_trunc.csv'), 
+                      col_types = 'ccd', progress = TRUE)
 
-setnames(spp_cells, c('SpeciesID', 'CsquareCode', 'probability'), c('species_id', 'csquare_code', 'probability'))
-
-spp_cells <- as.data.frame(spp_cells)
-
-spp <- fread(input = file.path(dir_aquamaps, 'tables/ohi_speciesoccursum.csv'), 
+spp <- fread(input = file.path(dir_aquamaps, 'csv/speciesoccursum.csv'), 
              verbose = FALSE, header = TRUE) %>%
-  mutate(sciname = paste(Genus, Species, sep = ' '),
+  mutate(sciname = paste(genus, species, sep = ' '),
          iucn_code = str_replace(toupper(iucn_code), 'LR/', ''),
          iucn_code = str_replace(iucn_code, 'N.E.', 'NE'))
 spp <- as.data.frame(spp)
@@ -26,15 +22,15 @@ spp <- as.data.frame(spp)
 ```{r hist_lost_area_w_threshold, warning = FALSE, message = FALSE, echo = FALSE, eval = TRUE}
 
 spp_df3 <- spp_cells %>%
-  group_by(species_id) %>%
+  group_by(speciesid) %>%
   summarize(cells_0.4 = sum(probability >= 0.4),
             cells_t = sum(probability >= 0)) %>%
-  left_join(spp, by = c('species_id' = 'SPECIESID')) %>%
+  left_join(spp, by = c('speciesid')) %>%
   mutate(prop = cells_0.4 / cells_t,
          iucn_code = ifelse(is.na(iucn_code), 'NE', iucn_code)) %>%
   filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX', 'DD', 'NE')) %>%
   # filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX')) %>%
-  select(sciname, species_id, cells_0.4, cells_t, prop, iucn_code)
+  select(sciname, speciesid, cells_0.4, cells_t, prop, iucn_code)
 
 iucn_levels = c('LC', 'NT', 'VU', 'EN', 'CR', 'EX', 'DD', 'NE')
 spp_df3 <- spp_df3 %>% 
@@ -63,12 +59,13 @@ hist_area_vs_threshold <- ggplot(spp_df3, aes(prop, fill = iucn_code)) +
                                'VU' = 'orange', 
                                'EN' = 'orangered2', 
                                'CR' = 'red4',
+                               'EX' = 'black',
                                'DD' = 'grey60',
                                'NE' = 'grey70')) +
   scale_x_continuous(expand = c(0, 0), limits = c(0, 1.02)) +
   scale_y_continuous(expand = c(0, 0)) +
   labs(x = 'Proportion of range included when selecting a threshold of 40%', 
-       y = sprintf('Proportion of all aquamaps species (n = %s)', nrow(spp_df3)),
+       y = sprintf('Proportion of all aquamaps species (n = %s)', nrow(spp)),
        fill = 'IUCN code')
 
 # print(hist_area_vs_threshold)
@@ -82,7 +79,7 @@ ggsave(file.path(dir_fig, 'si_am_threshold.png'),
 
 ![](../figures/si_am_threshold.png)
 
-```{r hist_lost_area_w_threshold_ne_dd_removed, warning = FALSE, message = FALSE, echo = FALSE, eval = TRUE}
+```{r hist_lost_area_w_threshold_ne_dd_removed, warning = FALSE, message = FALSE, echo = FALSE, eval = FALSE}
 
 spp_df3a <- spp_df3 %>% 
   filter(!iucn_code %in% c('DD', 'NE'))
@@ -125,7 +122,7 @@ ggsave(file.path(dir_fig, 'si_am_threshold2.png'),
 
 ```
 
-![](../figures/si_am_threshold2.png)
+<!--![](../figures/si_am_threshold2.png)-->
 
 
 ```{r df_lost_area_w_threshold, warning = FALSE, message = FALSE, echo = FALSE, eval = TRUE}
@@ -135,7 +132,7 @@ ggsave(file.path(dir_fig, 'si_am_threshold2.png'),
 threshold_df <- data.frame()
 for (i in seq(0, 1, .05)) { # i = .05
   temp_df <- spp_cells %>%
-    group_by(species_id) %>%
+    group_by(speciesid) %>%
     summarize(thresh       = i,
               cells_thresh = sum(probability >= thresh),
               cells_total  = sum(probability >= 0),
@@ -143,8 +140,8 @@ for (i in seq(0, 1, .05)) { # i = .05
     left_join(spp %>%
 #              filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX', 'DD', 'NE')), 
               filter(toupper(iucn_code) %in% c('LC', 'NT', 'VU', 'EN', 'CR', 'EX')), 
-            by = c('species_id' = 'SPECIESID')) %>%
-    select(sciname, species_id, thresh, cells_thresh, cells_total, proportion, iucn_code)
+            by = c('speciesid')) %>%
+    select(sciname, speciesid, thresh, cells_thresh, cells_total, proportion, iucn_code)
   
   threshold_df <- threshold_df %>%
     bind_rows(temp_df)
