--- a/data_explore/data_explore_coralmaps.Rmd
+++ b/data_explore/data_explore_coralmaps.Rmd
@@ -32,71 +32,7 @@ source('data_explore_fxns.R')
 ### the 'setwd()' is there for running by chunk
 ```
 
-``` {r define_fxns, echo = FALSE}
-#################################################################=
-### Species Map Function ###
-# This function takes a dataframe of loiczid per species ID, and a target species ID 
-### (as single or vector).  Return a df of cells ready to be rasterized.  
-### If AquaMaps, returned df includes aquamaps probability; if IUCN, returned
-### df includes proportional area.
-get_iucn_spp_map <- function(sid, spp_cells) { 
-
-  spp_map <- spp_cells %>%
-    filter(iucn_sid %in% sid)
-  if(nrow(spp_map) == 0) {
-    message('no IUCN cells found')
-    spp_map <- spp_map %>%
-      as.data.frame() %>%
-      select(iucn_sid, loiczid) %>%
-      mutate(area_iucn = NA)
-  } else {
-    spp_map <- spp_map %>%
-      group_by(iucn_sid, loiczid) %>%        
-      summarize(area_iucn = max(prop_area))
-    ### The group_by() and summarize() are to collapse cells with 
-    ### overlapped polygons, fixing the duplicate 'by' issue.
-    ### Note: this drops presence, sciname, and subpop columns
-  }
-  
-  return(spp_map %>% unique() %>% as.data.frame())
-}
-
-#################################################################=
-### Map vs Depth function
-### uses ggplot to create a formatted map of species ranges, including
-### Aquamaps, IUCN, and overlapped ranges; returns the plot object.
-plot_depthmap <- function(spp) {
-  map_iucn <- get_spp_map(spp$iucn_sid, iucn_spp_cells) %>%
-    mutate(iucn_pres = ifelse(area_iucn > 0, 1, 0)) %>%
-    select(-area_iucn, -iucn_sid) %>%
-    unique()
-
-  r_iucn_spp <- subs(loiczid_raster, 
-                     map_iucn[ , c('loiczid', 'iucn_pres')], 
-                     by = 'loiczid', 
-                     which = 'iucn_pres', 
-                     subsWithNA = TRUE)
-  
-  spp_pts <- as.data.frame(rasterToPoints(r_iucn_spp)) %>%
-    mutate(presence = 'IUCN')
-  
-  depth_poly_df <- rgdal::readOGR(dsn = 'coralmaps', layer = 'bath_200m') %>%
-    fortify() %>%
-    mutate(x = long, y = lat)
-  
-  spp_plot <- ggplot(spp_pts, aes(x = x, y = y)) +
-    ggtheme_map + 
-    geom_raster(aes(fill = presence), alpha = .8) +
-    scale_fill_manual(values = c('IUCN' = '#d95f02')) +
-    geom_polygon(data = depth_poly_df, color = 'black', fill = 'yellow', alpha = .8) +
-    borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
-    scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
-    scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2))
-}
-
-```
-
-```{r read_am_and_iucn_data, echo = FALSE, warning = FALSE, message = FALSE, results = 'hide'}
+```{r read_iucn_data, echo = FALSE, warning = FALSE, message = FALSE, results = 'hide'}
 
 spp_corals <- 'Oculina varicosa'
 
@@ -124,14 +60,52 @@ spp_list_corals <- read.csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv'), 
 
   spp <- spp_list_corals
 
-  spp_plot <- plot_depthmap(spp)
+  map_iucn <- get_spp_map(spp$iucn_sid, iucn_spp_cells) %>%
+    mutate(iucn_pres = ifelse(area_iucn > 0, 1, 0)) %>%
+    select(-area_iucn, -iucn_sid) %>%
+    unique()
 
-  print(spp_plot)
-  plotfile <- file.path(dir_fig, 'spp_maps', 
-                        sprintf('%s_%s.png', 
-                                spp_quad, 
-                                tolower(str_replace(spp_quads[i], ' ', '_'))))
-  ggsave(plotfile, height = 4.5, width = 8.7, units = 'cm')
+  r_iucn_spp <- subs(loiczid_raster, 
+                     map_iucn[ , c('loiczid', 'iucn_pres')], 
+                     by = 'loiczid', 
+                     which = 'iucn_pres', 
+                     subsWithNA = TRUE)
+  writeRaster(r_iucn_spp, 'coralmaps/oculina_varicosa.tif')
+  
+#   spp_pts <- as.data.frame(rasterToPoints(r_iucn_spp)) %>%
+#     mutate(presence = 'IUCN')
+#   
+#   rast_fine <- loiczid_raster %>%
+#     crop(extent(x = c(-135, -45), y = c(0, 45)))
+#   res(rast_fine) <- 0.05
+    
+  
+#   depth_poly <- rgdal::readOGR(dsn = 'coralmaps', layer = 'bath_200m')
+#   depth_pts <- rasterize(depth_poly, rast_fine) %>%
+#     rasterToPoints() %>%
+#     as.data.frame() %>%
+#     rename(bath200m = layer)
+#   
+#   spp_plot <- ggplot(spp_pts, aes(x = x, y = y)) +
+#     ggtheme_map + 
+#     theme(panel.background = element_rect(fill = 'lightblue')) +
+# #    geom_raster(aes(fill = presence), alpha = 1) +
+#     geom_raster(data = depth_pts, aes(x = x, y = y, fill = bath200m),
+#                 alpha = .5) +
+# #    scale_fill_manual(values = c('IUCN' = '#d95f02')) +
+#     borders('world', color='gray40', fill='gray45', size = .1) +
+#     coord_cartesian(xlim = c(-105, -60), ylim = c(7.5, 37.5)) +
+#     scale_x_continuous(breaks = seq(-105, -60, by = 15)) +
+#     scale_y_continuous(breaks = seq( 0,  45, by = 15)) +
+#     theme(legend.position = 'none',
+#           axis.text = element_blank())
+#   
+#   print(spp_plot)
+#   plotfile <- file.path(dir_fig, 'spp_maps', 
+#                         sprintf('%s_%s.png', 
+#                                 spp_quad, 
+#                                 tolower(str_replace(spp_quads[i], ' ', '_'))))
+#   ggsave(plotfile, height = 4.5, width = 8.7, units = 'cm')
   }
 
 ```
